# Wet2-Structs

./: Artist.cpp  Artist.h  AvlTree.h  CMakeLists.txt  Dry2.docx  HashTable.cpp  HashTable.h  List.cpp  List.h  MM_tests_sari.h  MusicManager.cpp  MusicManager.h  README.md  Wet2_Tasks.docx  library2.cpp  main_test.cpp  main_test_alon.cpp  ~$t2_Tasks.docx
Tests/WhatsApp/: MM_tests.h
Tests/WhatsApp/DS_HW2_TEST/: README.txt  run_test.sh  test_creator_helper.py
Tests/WhatsApp/old ones from wet1/: AVL_tests.h  MusicManger_sari_tests.h
